# airun

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  START.md  TODO.md  docker-compose.yml  pyproject.toml  src.txt
.github/workflows/: ci.yml
airun/: __init__.py  __main__.py  cli.py
airun/core/: __init__.py  ai_fixer.py  config.py  detector.py  llm_router.py  runners.py
airun/providers/: claude.py  ollama.py  openai.py
airun/utils/: __init__.py  analyzer.py  batch_executor.py  cleaner.py  examples.py  file_ops.py  log_viewer.py  logging.py  validation.py
docs/: configuration.md
examples/broken_scripts/: syntax_error.py
examples/demo/: run_demo.py
scripts/: install.sh  memory_test.py  profile_runner.py  seed_data.py  setup_dev.sh  setup_ollama.sh  stress_test.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_detector.py  test_llm_router.py  test_runners.py
tests/fixtures/scripts/: broken_python.py  test.py
tests/integration/: test_end_to_end.py  test_ollama_integration.py
